--- a/index1.3.html
+++ b/index1.3.html
@@ -3,11 +3,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Никита Гербали</h1>
-        <h2>Практика. День первый <h2> 
+        <h2>Практика. День первый. Задание 1.3(Динамическое)<h2>       
+        <h1>Никита Гербали</h1>       
         <p><a> <img src = "CZI_5164.jpg"> </a></p>
         <canvas id="canvas" width="500" height="500"></canvas>   
-        
-        <script src = "script.js"></script>
+        <script src = "script3.js"></script>
     </body>
 </html>
